; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_InterpretedFunction_call.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_InterpretedFunction_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64 }
%struct.TYPE_11__ = type { %struct.TYPE_9__, i32, i32, i32 }
%struct.TYPE_9__ = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"%p\0A\00", align 1
@SCRIPTSTATE_UNINITIALIZED = common dso_local global i64 0, align 8
@SCRIPTSTATE_CLOSED = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [50 x i8] c"Script engine state does not allow running code.\0A\00", align 1
@E_UNEXPECTED = common dso_local global i32 0, align 4
@DISPATCH_CONSTRUCT = common dso_local global i32 0, align 4
@DISPATCH_JSCRIPT_CALLEREXECSSOURCE = common dso_local global i32 0, align 4
@EXEC_RETURN_TO_INTERP = common dso_local global i32 0, align 4
@EXEC_CONSTRUCTOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, i32*, i32*, i32, i32, i32*, i32*)* @InterpretedFunction_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InterpretedFunction_call(%struct.TYPE_10__* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_10__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_11__*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = bitcast i32* %21 to %struct.TYPE_11__*
  store %struct.TYPE_11__* %22, %struct.TYPE_11__** %16, align 8
  store i32* null, i32** %18, align 8
  store i32 0, i32* %19, align 4
  %23 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %24 = call i32 @TRACE(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), %struct.TYPE_11__* %23)
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @SCRIPTSTATE_UNINITIALIZED, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %36, label %30

30:                                               ; preds = %7
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @SCRIPTSTATE_CLOSED, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %30, %7
  %37 = call i32 @WARN(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0))
  %38 = load i32, i32* @E_UNEXPECTED, align 4
  store i32 %38, i32* %8, align 4
  br label %113

39:                                               ; preds = %30
  %40 = load i32, i32* %12, align 4
  %41 = load i32, i32* @DISPATCH_CONSTRUCT, align 4
  %42 = and i32 %40, %41
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %58

44:                                               ; preds = %39
  %45 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %46 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %47 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %47, i32 0, i32 0
  %49 = call i32 @create_object(%struct.TYPE_10__* %45, i32* %48, i32** %18)
  store i32 %49, i32* %20, align 4
  %50 = load i32, i32* %20, align 4
  %51 = call i64 @FAILED(i32 %50)
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %44
  %54 = load i32, i32* %20, align 4
  store i32 %54, i32* %8, align 4
  br label %113

55:                                               ; preds = %44
  %56 = load i32*, i32** %18, align 8
  %57 = call i32* @to_disp(i32* %56)
  store i32* %57, i32** %11, align 8
  br label %58

58:                                               ; preds = %55, %39
  %59 = load i32, i32* %12, align 4
  %60 = load i32, i32* @DISPATCH_JSCRIPT_CALLEREXECSSOURCE, align 4
  %61 = and i32 %59, %60
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %63, label %67

63:                                               ; preds = %58
  %64 = load i32, i32* @EXEC_RETURN_TO_INTERP, align 4
  %65 = load i32, i32* %19, align 4
  %66 = or i32 %65, %64
  store i32 %66, i32* %19, align 4
  br label %67

67:                                               ; preds = %63, %58
  %68 = load i32, i32* %12, align 4
  %69 = load i32, i32* @DISPATCH_CONSTRUCT, align 4
  %70 = and i32 %68, %69
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %72, label %76

72:                                               ; preds = %67
  %73 = load i32, i32* @EXEC_CONSTRUCTOR, align 4
  %74 = load i32, i32* %19, align 4
  %75 = or i32 %74, %73
  store i32 %75, i32* %19, align 4
  br label %76

76:                                               ; preds = %72, %67
  %77 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %78 = call i32 @create_dispex(%struct.TYPE_10__* %77, i32* null, i32* null, i32** %17)
  store i32 %78, i32* %20, align 4
  %79 = load i32, i32* %20, align 4
  %80 = call i64 @SUCCEEDED(i32 %79)
  %81 = icmp ne i64 %80, 0
  br i1 %81, label %82, label %103

82:                                               ; preds = %76
  %83 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %84 = load i32, i32* %19, align 4
  %85 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %86 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %85, i32 0, i32 3
  %87 = load i32, i32* %86, align 4
  %88 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %89 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %88, i32 0, i32 2
  %90 = load i32, i32* %89, align 4
  %91 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %92 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %91, i32 0, i32 1
  %93 = load i32, i32* %92, align 4
  %94 = load i32*, i32** %11, align 8
  %95 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %96 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %95, i32 0, i32 0
  %97 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %96, i32 0, i32 0
  %98 = load i32*, i32** %17, align 8
  %99 = load i32, i32* %13, align 4
  %100 = load i32*, i32** %14, align 8
  %101 = load i32*, i32** %15, align 8
  %102 = call i32 @exec_source(%struct.TYPE_10__* %83, i32 %84, i32 %87, i32 %90, i32 %93, i32* %94, i32* %97, i32* %98, i32 %99, i32* %100, i32* %101)
  store i32 %102, i32* %20, align 4
  br label %103

103:                                              ; preds = %82, %76
  %104 = load i32*, i32** %18, align 8
  %105 = icmp ne i32* %104, null
  br i1 %105, label %106, label %109

106:                                              ; preds = %103
  %107 = load i32*, i32** %18, align 8
  %108 = call i32 @jsdisp_release(i32* %107)
  br label %109

109:                                              ; preds = %106, %103
  %110 = load i32*, i32** %17, align 8
  %111 = call i32 @jsdisp_release(i32* %110)
  %112 = load i32, i32* %20, align 4
  store i32 %112, i32* %8, align 4
  br label %113

113:                                              ; preds = %109, %53, %36
  %114 = load i32, i32* %8, align 4
  ret i32 %114
}

declare dso_local i32 @TRACE(i8*, %struct.TYPE_11__*) #1

declare dso_local i32 @WARN(i8*) #1

declare dso_local i32 @create_object(%struct.TYPE_10__*, i32*, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32* @to_disp(i32*) #1

declare dso_local i32 @create_dispex(%struct.TYPE_10__*, i32*, i32*, i32**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @exec_source(%struct.TYPE_10__*, i32, i32, i32, i32, i32*, i32*, i32*, i32, i32*, i32*) #1

declare dso_local i32 @jsdisp_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
